Improve google cloud build setup scripts and add master branch build_branch release trigger

--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -19,7 +19,7 @@
     {% elif build_mode == "build" %}
     "branchName": "^(feature|bug|enhancement|refactoring|ci)/.*"
     {% elif build_mode == "release" %} 
-    "branchName": "^develop"
+    "branchName": "^(develop|master)$"
     {% endif %}
   },
   {% if build_mode == "rebuild"  %}
