Update includeFiles in google cloud build triggers

--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -58,7 +58,8 @@
     "flavors/{{ flavor }}/**",
     "ext/**",
     "test/**",
-    "google-cloud-build/**"
+    "google-cloud-build/**",
+    "script-languages"
   ],
   {% endif %}
   "filename": "google-cloud-build/ci-scripts/build_branch.yaml"
