--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -23,7 +23,8 @@
     "flavors/{{ flavor }}/**",
     "ext/**",
     "test/**",
-    "google-cloud-build/**"
+    "google-cloud-build/**",
+    "script-languages"
   ],
   "filename": "google-cloud-build/ci-scripts/build_pull_request.yaml"
 }
