Update includeFiles in google cloud build triggers such that they trigger for the file .current_submodules

--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -24,7 +24,7 @@
     "ext/**",
     "test/**",
     "google-cloud-build/**",
-    "script-languages"
+    ".current_gitmodules"
   ],
   "filename": "google-cloud-build/ci-scripts/build_pull_request.yaml"
 }
