--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -59,7 +59,7 @@
     "ext/**",
     "test/**",
     "google-cloud-build/**",
-    "script-languages"
+    ".current_gitmodules"
   ],
   {% endif %}
   "filename": "google-cloud-build/ci-scripts/build_branch.yaml"
