Fix dsn in exatest/__init__.py and fix regex for tests directory in triggers

--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -57,7 +57,7 @@
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
     "ext/**",
-    "test/**",
+    "tests/**",
     "google-cloud-build/**",
     ".current_gitmodules"
   ],
