Add tests for exaslct init script and CI job for exalsct tests

--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -53,6 +53,7 @@
   },
   {% if build_mode == "build" %}
   "includedFiles": [
+    "docker_db_config/**",
     "src/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
