--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -18,6 +18,7 @@
     "_JOB_TYPE": "build+test"
   },
   "includedFiles": [
+    "docker_db_config/**",
     "src/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
