Fix triggers and add docker to CI Dockerfile

--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -60,7 +60,8 @@
     "ext/**",
     "tests/**",
     "google-cloud-build/**",
-    ".current_gitmodules"
+    ".current_gitmodules",
+    "Pipfile"
   ],
   {% endif %}
   "filename": "google-cloud-build/ci-scripts/build_branch.yaml"
