--- a/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
+++ b/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
@@ -19,7 +19,14 @@
     "tests/test/selftest/**",
     "tests/lib/**",
     "google-cloud-build/**",
-    ".current_gitmodules"
+    "Dockerfile",
+    "test_exaslct_init_script.sh",
+    "run_all_exaslct_tests.sh",
+    "run_exaslct_test.sh",
+    "exaslsct",
+    "pipenv_utils.sh",
+    ".current_gitmodules",
+    "Pipfile"
   ],
   "filename": "google-cloud-build/ci-scripts/test_branch_exaslct.yaml"
 }
