--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -25,7 +25,8 @@
     "ext/**",
     "tests/**",
     "google-cloud-build/**",
-    ".current_gitmodules"
+    ".current_gitmodules",
+    "Pipfile"
   ],
   "filename": "google-cloud-build/ci-scripts/build_pull_request.yaml"
 }
