Fix spawn-test-environment cli command which broke because of the missing exclusion from cleanup, fix upload cli command and fix test_branch_exaslct trigger for google build

--- a/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
+++ b/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
@@ -11,6 +11,8 @@
   "substitutions": {
     "_JOB_ID": "{{ job_id }}", 
     "_JOB_TYPE": "Test exaslct"
+    "_GITHUB_USER_NAME": "{{ github_user_name }}",
+    "_GITHUB_REPOSITORY": "{{ github_repository }}"
   },
   "includedFiles": [
     "docker_db_config/**",
