--- a/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
+++ b/google-cloud-build/triggers/test_branch_exaslct.json.jinja2
@@ -10,7 +10,7 @@
   "description": "Exaslct Test branch",
   "substitutions": {
     "_JOB_ID": "{{ job_id }}", 
-    "_JOB_TYPE": "Test exaslct"
+    "_JOB_TYPE": "Test exaslct",
     "_GITHUB_USER_NAME": "{{ github_user_name }}",
     "_GITHUB_REPOSITORY": "{{ github_repository }}"
   },
