--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -53,13 +53,15 @@
   },
   {% if build_mode == "build" %}
   "includedFiles": [
+    "docker_db_config/**",
     "src/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
     "ext/**",
     "tests/**",
     "google-cloud-build/**",
-    ".current_gitmodules"
+    ".current_gitmodules",
+    "Pipfile"
   ],
   {% endif %}
   "filename": "google-cloud-build/ci-scripts/build_branch.yaml"
