--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -18,13 +18,15 @@
     "_JOB_TYPE": "build+test"
   },
   "includedFiles": [
+    "docker_db_config/**",
     "src/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
     "ext/**",
     "tests/**",
     "google-cloud-build/**",
-    ".current_gitmodules"
+    ".current_gitmodules",
+    "Pipfile"
   ],
   "filename": "google-cloud-build/ci-scripts/build_pull_request.yaml"
 }
