Fix and improve Google Cloud Build jobs
- Fix test_branch_exaslct.yaml
- Fix trigger directories for build jobs
- Move job build output to sub directory in exaslct output directory to not copy the cache during check_build.sh
- Move push to release docker repository into the build jobs for the master branch
- Add scripts download_config.sh and update_triggers.sh

--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -19,7 +19,7 @@
   },
   "includedFiles": [
     "docker_db_config/**",
-    "src/**",
+    "exaudfclient/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
     "ext/**",
