Add master branch trigger and release debug trigger react on ci-release-test/ branch prefix

--- a/google-cloud-build/triggers/release.json.jinja2
+++ b/google-cloud-build/triggers/release.json.jinja2
@@ -13,7 +13,7 @@
     {% if debug == false  %}
     "tagName": "^(([^c][^i][^/]|[^c]i.|c[^i].|ci[^/]).*|..$)"
     {% else  %}
-    "branchName": "^ci/.*"
+    "branchName": "^ci-release-test/.*"
     {% endif %}
   }, 
   {% if debug == false  %}
