--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -19,7 +19,7 @@
     {% elif build_mode == "build" %}
     "branchName": "^(feature|bug|enhancement|refactoring|ci)/.*"
     {% elif build_mode == "release" %} 
-    "branchName": "^(develop|master)$"
+    "branchName": "^(develop|master|ci-release-test/.*)$"
     {% endif %}
   },
   {% if build_mode == "rebuild"  %}
