--- a/google-cloud-build/triggers/export.json.jinja2
+++ b/google-cloud-build/triggers/export.json.jinja2
@@ -8,7 +8,7 @@
     "repoName": "github_{{ github_user_name }}_{{ github_repository }}",
     "branchName": ".*"
   }, 
-  "description": "Export {{ flavor }}",
+  "description": "Export {{ flavor }} {{ github_user_name }}-{{ github_repository }}",
   "substitutions": {
     "_JOB_ID": "{{ job_id }}",
     "_FLAVOR": "{{ flavor }}",
