Fixes and improvements for Google Cloud Build CI Setup (#123)
Trigger Changes:
- Master branch and release trigger react on ci-release-test
- Fix trigger directories for build jobs
- Add repo name to the trigger name

Build Cache Changes:
- Move push to public build cache into the build jobs for the master branch
- All build trigger push to internal build cache with commit hash and without
- Pull build-container if possible or build and push it with build_or_pull_build_container.sh
- If the test-container not available in the public build cache, then build and push it to the build caches

Exaslct Tests Change:
- Fix test_branch_exaslct.yaml
- Fix GitHub status name for exaslct tests

Additional Changes:
- Add scripts download_config.sh and update_triggers.sh
- Use parallel copy with gsutils
- Build steps which use docker, now list the local docker images at the end
- Move job build output to subdirectory in exaslct output directory to not copy the cache during check_build.sh

--- a/google-cloud-build/triggers/release.json.jinja2
+++ b/google-cloud-build/triggers/release.json.jinja2
@@ -13,13 +13,13 @@
     {% if debug == false  %}
     "tagName": "^(([^c][^i][^/]|[^c]i.|c[^i].|ci[^/]).*|..$)"
     {% else  %}
-    "branchName": "^ci/.*"
+    "branchName": "^ci-release-test/.*"
     {% endif %}
   }, 
   {% if debug == false  %}
-  "description": "Release",
+  "description": "Release {{ github_user_name }}-{{ github_repository }}",
   {% else %}
-  "description": "Release (Debug)",
+  "description": "Release (Debug) {{ github_user_name }}-{{ github_repository }}",
   {% endif %}
   "substitutions": {
     "_JOB_ID": "{{ job_id }}",
