--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -8,7 +8,7 @@
     "repoName": "github_{{ github_user_name }}_{{ github_repository }}",
     "branchName": "^pull_request/.*"
   },
-  "description": "Build pull request {{ flavor }}",
+  "description": "Build pull request {{ flavor }} {{ github_user_name }}-{{ github_repository }}",
   "substitutions": {
     "_JOB_ID": "{{ job_id }}",
     "_FLAVOR": "{{ flavor }}",
@@ -19,7 +19,7 @@
   },
   "includedFiles": [
     "docker_db_config/**",
-    "src/**",
+    "exaudfclient/**",
     "exaslct_src/**",
     "flavors/{{ flavor }}/**",
     "ext/**",
