--- a/google-cloud-build/triggers/release.json.jinja2
+++ b/google-cloud-build/triggers/release.json.jinja2
@@ -17,9 +17,9 @@
     {% endif %}
   }, 
   {% if debug == false  %}
-  "description": "Release {{ github_user_name }}-{{ github_repository }}",
+  "description": "Release {{ repo_short_name}}",
   {% else %}
-  "description": "Release (Debug) {{ github_user_name }}-{{ github_repository }}",
+  "description": "Release Debug {{ repo_short_name }}",
   {% endif %}
   "substitutions": {
     "_JOB_ID": "{{ job_id }}",
