Remove exaslct implementation and replace it by the starter scripts of exasol/script-languages-container-tool

--- a/google-cloud-build/triggers/build_pull_request.json.jinja2
+++ b/google-cloud-build/triggers/build_pull_request.json.jinja2
@@ -21,15 +21,13 @@
     ".current_gitmodules",
     "Dockerfile",
     "exaslct",
-    "exaslct_src/**", 
+    "exaslct_scripts/**", 
     "exaudfclient/**",
     "ext/**",
     "flavors/{{ flavor }}/**",
     "google-cloud-build/**",
     "pipenv_utils.sh",
     "Pipfile",
-    "run_exaslct_test.sh",
-    "test_exaslct_init_script.sh",
     "tests/**"
   ],
   "filename": "google-cloud-build/ci-scripts/build_pull_request.yaml"
