--- a/google-cloud-build/triggers/build_branch.json.jinja2
+++ b/google-cloud-build/triggers/build_branch.json.jinja2
@@ -57,15 +57,13 @@
     ".current_gitmodules",
     "Dockerfile",
     "exaslct",
-    "exaslct_src/**", 
+    "exaslct_scripts/**", 
     "exaudfclient/**",
     "ext/**",
     "flavors/{{ flavor }}/**",
     "google-cloud-build/**",
     "pipenv_utils.sh",
     "Pipfile",
-    "run_exaslct_test.sh",
-    "test_exaslct_init_script.sh",
     "tests/**"
   ],
   {% endif %}
